# p-id-extractor

./: README.md  pyproject.toml
data/output/: Daftar_Equipment_Progressive.xlsx
src/: main.py
