[project]
name = "pid-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "layoutparser>=0.3.4",
    "lxml>=6.0.2",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "torchvision>=0.24.1",
]
